# IRAPI

./: .gitignore  .pre-commit-config.yaml  Dockerfile  IRServer.code-workspace  README.md  compose.yml  pyproject.toml  requirements-test.txt  start.sh
.github/workflows/: coverage.yml
api/: __init__.py  database.py  schemes.py
api/core/: config.py  security.py
api/crud/: devices.py  signals.py  users.py
api/db/: models.py
api/routers/: auth.py  devices.py  signals.py  users.py
tests/: conftest.py  test_devices.py
tests/auth/: test_auth.py
tests/routes/: test_devices.py  test_signals.py  test_users.py
