[tool.poetry]
name = "irserver"
version = "0.1.0"
description = "fastapi server receiving, managing and sending ir signals"
authors = ["raphiniert <dev@raphiniert.eu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
