[tool.poetry]
name = "irserver"
version = "0.1.0"
description = "fastapi server receiving, managing and sending ir signals"
authors = ["raphiniert <dev@raphiniert.eu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.9"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 89
target-version = ['py311']

[tool.flake8]
max-line-length = 89
