[tool.poetry]
name = "irserver"
version = "0.1.0"
description = "fastapi server receiving, managing and sending ir signals"
authors = ["raphiniert <dev@raphiniert.eu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
sqlalchemy = "^2.0.9"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
rich = "^13.3.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
black = "^23.3.0"
ruff = "^0.0.267"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.5"
httpx = "^0.24.0"
anyio = "^3.6.2"


[tool.poetry.extras]
test = ["pytest", "coverage", "httpx", "anyio"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.ruff]
line-length = 90
target-version = "py311"
